Changelog
=========

2.1.2 (unreleased)
------------------

- Fixed Templatedossier: create a newfile NamedFile object with the same data, instead of set only a reference.
  Issue #1368 Bearbeitung von Vorlagen (Metadaten und Dokumente)
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1368/
  [phgross]


2.1.1 (2012-06-22)
------------------

- Templatedossier: Adjust edit permission, normal user should not have the right to edit.
  [phgross]

- Templatedossier: Adjust translations.
  [phgross]


2.1 (2012-06-21)
------------------

- Templatedossier: Disalbe some columns in the document and trash listings.
  [phgross]

- Templatedossier: Adjust default value setter, works now also for boolean fields (preserved_as_paper).
  [phgross]

- Fixed earliest enddate calculation: include objs in subdossiers.
  Issue #1525 Dossier abschliessen: Wieder eroeffnen bzw. wieder abschliessen bei Subdossier.
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1525/
  [phgross]

- Implements start date validation in the ResolveConiditions.
  Issue #1546 DI-KSA: Fehlermeldung beim Versuch "Dossier abschliessen"
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1546
  [phgross]

- Issue #1512 Auswahl exportieren: Sortieren nach Ablagenr. funktioniert nicht
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1512
  Dossier reporter: Added filing number filing column.

- Rebuild the document creation in templatedossier:
  Create a new doc obj instead of copying it, this set also the default values.
  [phgross]

- Added some adjustments in the resolving process:
  - Made recursive_resolve safe, can hanlde now allready resolved sbudossiers.
  - Made reactivate possible for subdossier if the maindossier is still open.
  - Adjust recursive_resolving of subdossie: overwrite the end date only when its not valid or none.
  [phgross]
